# aed3-2019-1c-tp2

./: .gitignore  CMakeLists.txt  README.md  RunSegmentacion.cpp  createSegmentatedImage.py  edges_count.py  main-floyd-warshall  main-min-path.cpp  mediciones  pintar-segmentacion.py  runSegmentacion  sendImage.py
project/src/algorithms/: bellman-ford.hpp  dijkstra-with-fifo-queue.hpp  dijkstra-with-priority-queue.hpp  edge-weighted-graph-bellman-ford.hpp  floyd-warshall.hpp  gas-graph-bellman-ford.hpp  gas-graph-dijkstra-with-fifo-queue.hpp  main-bellman-ford.cpp  main-floyd-warshall.cpp
project/src/entity/: AdjacencyListGraph.h  AdjacencyNode.h  Edge.h  EdgeWeightedGraph.h  GasGraph.h  Graph.h  VertexAndEdgeWeightedGraph.h
project/src/entity/auxiliar/: AdjacencyNode.h  ArrayRepresentation.cpp  ArrayRepresentation.h  DirectedTreeGraph.h  Representation.h  RepresentationNode.h  TreeEdge.h  TreeNode.h  TreeRepresentation.cpp  TreeRepresentation.h
project/src/entity/auxiliar/impl/: AdjacencyNode.cpp  DirectedTreeGraph.cpp  RepresentationNode.cpp  TreeEdge.cpp  TreeNode.cpp
project/src/entity/core/: AdjacencyListGraph.h  DirectedTreeGraph.h  Edge.h  Graph.h
project/src/entity/core/impl/: AdjacencyListGraph.cpp  DirectedTreeGraph.cpp  Edge.cpp
project/src/entity/impl/: AdjacencyListGraph.cpp  AdjacencyNode.cpp  Edge.cpp  EdgeWeightedGraph.cpp  GasGraph.cpp  VertexAndEdgeWeightedGraph.cpp
project/src/experiments/: gen_graphs.py  timer.cpp
project/src/experiments/minpath/: ej1_densidades.ipynb  ej2_distancias.ipynb  gen_random_connected_graphs.py  notebook1.ipynb  random_connected_graph.py  timer.cpp
project/src/experiments/minpath/salidas/exp1/: 1_salida_grafos_random_10_10_20_2_0.0.txt  2_salida_grafos_random_10_10_20_2_0.5.txt  3_salida_grafos_random_10_10_20_2_1.0.txt  tiempos_1_salida_grafos_random_10_10_20_2_0.0.csv  tiempos_2_salida_grafos_random_10_10_20_2_0.5.csv  tiempos_3_salida_grafos_random_10_10_20_2_1.0.csv
project/src/experiments/minpath/salidas/exp1/1/: 1_salida_grafos_random_10_10_20_2_0.0.txt  2_salida_grafos_random_10_10_20_2_0.5.txt  3_salida_grafos_random_10_10_20_2_1.0.txt  tiempos_1_salida_grafos_random_10_10_20_2_0.0.csv  tiempos_2_salida_grafos_random_10_10_20_2_0.5.csv  tiempos_3_salida_grafos_random_10_10_20_2_1.0.csv
project/src/experiments/minpath/salidas/exp1/old/: tiempos_1_salida_grafos_random_10_10_20_2_0.0.csv
project/src/experiments/minpath/salidas/exp2/: 4_salida_grafos_random_10_10_20_2_0.0_1_15.txt  5_salida_grafos_random_10_10_20_2_0.0_16_60.txt  tiempos_4_salida_grafos_random_10_10_20_2_0.0_1_15.csv  tiempos_5_salida_grafos_random_10_10_20_2_0.0_16_60.csv
project/src/experiments/minpath/salidas/exp2/1/: 4_salida_grafos_random_10_10_20_2_0.0_1_15.txt  5_salida_grafos_random_10_10_20_2_0.0_16_60.txt  tiempos_4_salida_grafos_random_10_10_20_2_0.0_1_15.csv  tiempos_5_salida_grafos_random_10_10_20_2_0.0_16_60.csv
project/src/experiments/minpath/salidas/exp2/old/: 5_salida_grafos_random_10_10_20_2_0.0_16_60.txt  tiempos_4_salida_grafos_random_10_10_20_2_0.0_1_15.csv
project/src/experiments/segmentacion/: RunSegmentacion.cpp  createSegmentatedImage.py  experimento-segmentacion-1.cpp  imagetomatrix.py  pintar-segmentacion.py  sendImage.py
project/src/misc/: defines.h
project/src/parteUno/: SegmentationAlgorithm.cpp  SegmentationAlgorithm.h  imagetomatrix.py
project/src/utils/: ArrayCompressedDisjoinSet.h  ArrayDisjoinSet.h  CompressedDisjoinSet.h  DefaultDisjoinSet.h  DisjoinSet.h  GetMST.h  TreeCompressedDisjoinSet.h  TreeDisjoinSet.h  types.h
project/src/utils/impl/: ArrayCompressedDisjoinSet.cpp  ArrayDisjoinSet.cpp  CompressedDisjoinSet.cpp  DefaultDisjoinSet.cpp  GetMST.cpp  TreeCompressedDisjoinSet.cpp  TreeDisjoinSet.cpp
project/test/data/: detour.in  graph.in  smart-refill.in
project/test/entity/: GraphTest.cpp
project/test/parteUno/: SegmentationTest.cpp
project/test/utils/: DisjoinSetTest.cpp  GetMSTTest.cpp
