cmake_minimum_required(VERSION 3.12)
project(aed3_2019_1c_tp2)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -Wall")

add_subdirectory(lib/googletest)
include_directories(lib/googletest/googletest/include)
include_directories(lib/googletest/googlemock/include)


set(SOURCE_FILES prueba_integracion_con_gtest/test/factorialTest.cpp prueba_integracion_con_gtest/src/factorial.cpp)

add_executable(aed3_2019_1c_tp2 main.cpp ${SOURCE_FILES})

target_link_libraries(aed3_2019_1c_tp2 gtest gtest_main)